creacion de endpoint que trae listado de boletin e implementacion de CORS en main.go
